Swiss/Norwegian toegevoegd + props-file aangepast met strings van nationaliteiten om values terug te vinden

--- a/src/model/rates.properties
+++ b/src/model/rates.properties
@@ -1,5 +1,5 @@
-eur2usd=1.31774
-eur2gbp=0.84306
-eur2nok=8.0157
-eur2sek=8.7332
-eur2chf=1.2357
+USD=1.31774
+GBP=0.84306
+NOK=8.0157
+SEK=8.7332
+CHF=1.2357
